--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
@@ -108,7 +108,7 @@
 
 <body>
     <div class="bottom-section">
-        <a asp-controller="MaterialPurchase" asp-action="Add">Add New</a>
+        <a asp-controller="MaterialPurchase" asp-action="Add">Add New Material Purchase</a>
     </div>
 
     <b style="text-align: left; margin: 20px 0;">Total Purchase: @ViewBag.materialPurchaseCount</b>
