instead of using return View now we use Redirect action in every post add action in this application

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
@@ -107,6 +107,8 @@
 </head>
 
 <body>
+    <span class="text-success"><b>@TempData["SuccessMessage"]</b></span>
+
     <div class="bottom-section">
         <a asp-controller="MaterialPurchase" asp-action="Add">Add New</a>
     </div>
