--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
@@ -87,6 +87,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+    <span class="text-success"><b>@TempData["SuccessMessage"]</b></span>
+
     <div class="dropdown-section" style="display: flex; justify-content: space-between; align-items: center;">
         <div style="width: 200px;">
             <form method="get" action="/CostMaster/Index">
