--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -78,6 +78,8 @@
     </style>
 </head>
     <body>
+        <span class="text-success"><b>@TempData["SuccessMessage"]</b></span>
+
         <form method="get" asp-action="Index" onsubmit="return validateDates()">
             <label><b>From:</b></label>
             <input type="date" name="DateFrom" value="@ViewBag.DateFrom"/>
