Removed IsActive Column from CostMaster Table and now we fetch cost based on nearest date with comparison system current date

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Add.cshtml
@@ -39,7 +39,7 @@
         var jobCategoryId = $('#jobCategorySelect').val();
         if (jobCategoryId) {
             $.ajax({
-                url: '@Url.Action("Add", "CostMaster")', // Replace with your actual controller name
+                url: '@Url.Action("GetCostByJobCategory", "CostMaster")', // Replace with your actual controller name
                 type: 'GET',
                 data: { jobCategoryId: jobCategoryId },
                 success: function (result) {
