--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
@@ -43,12 +43,12 @@
                     <div class="col-md-6">
                         <label asp-for="UnitPrice" class="control-label"><b>Unit Price</b></label>
                         <div class="input-group">
-                            <input asp-for="UnitPrice" id="unitPrice" class="form-control" />
+                            <input asp-for="UnitPrice" id="unitPrice" class="form-control" readonly />
                             <span style="display: flex; align-items: center;">
                                 <b id="unitOfMeasureText" style="display: none;">&nbsp; /</b>
                                 <span id="unitOfMeasureDisplay" style="margin-left: 5px;">@Model?.UnitOfMeasure</span>
                             </span>
-                            <input type="hidden" id="unitOfMeasure" name="UnitOfMeasure" value="@Model?.UnitOfMeasure" />
+                            <input type="hidden" id="unitOfMeasure" name="UnitOfMeasure" value="@Model?.UnitOfMeasure" readonly />
                         </div>
                         <span asp-validation-for="UnitPrice" class="text-danger"></span>
                     </div>
