--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Edit.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Edit.cshtml
@@ -10,7 +10,8 @@
 
             <div class="form-group mb-3" style="width: 20%;">
                 <label for="ContractorName"><b>Contractor Name</b></label>
-                <input type="text" id="ContractorName" name="ContractorName" value="@Model.ContractorName" class="form-control" />
+                <input type="text" id="ContractorName" name="ContractorName" value="@Model.ContractorName" 
+                       maxlength="15" class="form-control" required />
             </div>
 
             <div class="form-group mb-3" style="width: 20%;">
@@ -47,12 +48,13 @@
 
             <div class="form-group mb-3" style="width: 20%;">
                 <label for="MobileNumber"><b>Mobile Number</b></label>
-                <input type="text" id="MobileNumber" name="MobileNumber" value="@Model.MobileNumber" class="form-control" />
+                <input type="text" id="MobileNumber" name="MobileNumber" value="@Model.MobileNumber" 
+                       maxlength="10" minlength="10" class="form-control" required />
             </div>
 
             <div class="form-group" style="width: 20%;">
                 <label asp-for="ReferredBy" class="control-label"><b>Referred By</b></label>
-                <input asp-for="ReferredBy" class="form-control" />
+                <input asp-for="ReferredBy" maxlength="15" minlength="3" class="form-control" required />
                 <span asp-validation-for="ReferredBy" class="text-danger"></span>
             </div>
             <br />
