--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
@@ -22,7 +22,7 @@
             <br />
             <div class="form-group" style="width: 60%;">
                 <label asp-for="PhoneNumber" class="control-label"><b>Supplier Contact</b></label>
-                <input asp-for="PhoneNumber" class="form-control" />
+                <input asp-for="PhoneNumber" maxlength="10" minlength="10" class="form-control" required />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <br />
