Added StoredProcedure for Add, Update And Delete and use in ContractorRepositoryUsingSp method instead of using sql query

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
@@ -86,6 +86,7 @@
     @TempData["UpdateSuccessMessage"]
     @TempData["DeleteSuccessMessage"]
 </span>
+<b style="text-align: left; margin: 20px 0;">Total Purchase: @ViewBag.ContractorCount</b>
 <table>
     <thead>
         <tr class="header-row">
