--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -82,10 +82,10 @@
 
         <form method="get" asp-action="Index" onsubmit="return validateDates()">
             <label><b>From:</b></label>
-            <input type="date" name="DateFrom" value="@ViewBag.DateFrom"/>
+            <input type="date" id="DateFrom" name="DateFrom" value="@ViewBag.DateFrom" />
             &nbsp;&nbsp;&nbsp;
             <label><b>To:</b></label>
-            <input type="date" name="DateTo" value="@ViewBag.DateTo" />
+            <input type="date" id="DateTo" name="DateTo" value="@ViewBag.DateTo" />
             &nbsp;&nbsp;&nbsp;
             <button type="submit" class="btn btn-primary">Go</button>
         </form>
