I added a new Helpers folder and created a class called RepositoryRegistration. In this class, I defined a few methods and called them in Program.cs within an if condition. Additionally, I removed the ViewModels folder.

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConstructionApplication.ViewModels.ContractorVm.ContractorVm
+﻿@model ConstructionApplication.ViewModels.ContractorVm
 
 <h4>Add Contractor</h4>
 <br />
