--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Edit.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConstructionApplication.ViewModels.ContractorVm.ContractorVm
+﻿@model ConstructionApplication.ViewModels.ContractorVm
 
 <h3 class="text-center mb-4">Contractor Update</h3>
 <div class="row">
