--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ConstructionApplication.ViewModels.ContractorVm.ContractorVm>
+﻿@model List<ConstructionApplication.ViewModels.ContractorVm>
 
 <h3 style="text-align: center;">Contractor List</h3>
 <div class="bottom-section">
