--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ConstructionApplication.ViewModels.CostMasterVm.CostMasterVm>
+﻿@model List<CostMasterVm>
 
 <h3 style="text-align: center;">Cost Master Report</h3>
 <div class="bottom-section">
