--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConstructionApplication.ViewModels.DailyAttendance.DailyAttendanceVm
+﻿@model DailyAttendanceVm
 
 <h1>Daily Attendance</h1>
 <br />
