--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConstructionApplication.ViewModels.MaterialPurchaseVm.MaterialPurchaseVm
+﻿@model MaterialPurchaseVm
 
 <h4>Material Purchase</h4>
 <br />
