--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ConstructionApplication.ViewModels.MaterialPurchaseVm.MaterialPurchaseVm>
+﻿@model List<MaterialPurchaseVm>
 
 <h3 style="text-align: center;">Material Purchase Report</h3>
 <html>
