--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConstructionApplication.ViewModels.DailyAttendance.DailyAttendanceVm
+﻿@model DailyAttendanceVm
 
 <h1>Add Using Ajax</h1>
 <hr />
@@ -55,6 +55,8 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
+        var selectedContractorId = '@(ViewBag.SelectedContractorId ?? "-1")';
+
         // When the dropdown value changes, make an AJAX call to fetch the cost.
         $('#JobCategoryId').change(function () {
             var jobCategoryId = $(this).val();
@@ -69,6 +71,8 @@
                         var s = '<option value="-1">SELECT</option>';
                         
                         for (var i = 0; i < response.contractors.length; i++) {
+                            var contractorId = response.contractors[i].contractorId;
+                            var selected = contractorId == selectedContractorId ? 'selected' : '';
                             s += '<option value="' + response.contractors[i].contractorId + '">' + response.contractors[i].contractorName + '</option>';
                         }
                         $("#contractorId").html(s);
@@ -83,6 +87,7 @@
                 // Clear amount and total amount fields if no valid category is selected.
                 $('#amountPerWorker').val('');
                 $('#totalAmount').val('');
+                $('#contractorId').html('<option value="-1">SELECT</option>');
             }
         });
 
@@ -98,5 +103,10 @@
         $('#totalWorker').on('input', function () {
             updateTotalAmount();
         });
+
+        // Restore dropdown values on page load if validation fails
+        if ($('#JobCategoryId').val() > 0) {
+            $('#JobCategoryId').trigger('change');
+        }
     });
 </script>
