--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
@@ -86,7 +86,7 @@
     @TempData["UpdateSuccessMessage"]
     @TempData["DeleteSuccessMessage"]
 </span>
-<b style="text-align: left; margin: 20px 0;">Total Purchase: @ViewBag.ContractorCount</b>
+<b style="text-align: left; margin: 20px 0;">Total Contractors: @ViewBag.ContractorCount</b>
 <table>
     <thead>
         <tr class="header-row">
