--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Add.cshtml
@@ -43,6 +43,12 @@
                 <input asp-for="TotalAmount" id="totalAmount" class="form-control" readonly />
             </div>
             <br />
+            <div class="form-group" style="width: 60%;">
+                <label asp-for="Notes" class="control-label"><b>Notes</b></label>
+                <textarea asp-for="Notes" class="form-control" rows="4"></textarea>
+                <span asp-validation-for="Notes" class="text-danger"></span>
+            </div>
+            <br />
 
             <div class="form-group">
                 <input type="submit" value="Add" class="btn btn-primary" />
