--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"><b>Contact Us</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/PlayAlertSoundUsingJavaScript.html"><b>Alert Sound</b></a>
+                        </li>
                     </ul>
                 </div>
             </div>
