Implemented a new user login feature in my Construction Application.

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"><b>Contact Us</b></a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogIn"><b>LogIn</b></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/PlayAlertSoundUsingJavaScript.html"><b>Alert Sound</b></a>
                         </li>
                     </ul>
