Added login feature and site selection functionality to enhance the Construction Application

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Home/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿<!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
 
+@* @{
+    ViewData["Title"] = "Home";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+} *@
+
+
 <style>
     /* Background and Overlay Section */
     .bg-image {
