--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -1,9 +1,16 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var userId = Context.Session.GetInt32("UserId");
+    var userName = Context.Session.GetString("UserName");
+    var email = Context.Session.GetString("Email");
+    var selectedSiteName = Context.Session.GetString("SelectedSiteName");
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ConstructionApplication</title>
+    <title>Construction Application</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ConstructionApplication.styles.css" asp-append-version="true" />
@@ -12,46 +19,57 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-
-                @* <a class="navbar-brand" href="https://localhost:7212/"> *@
-                <a class="navbar-brand" asp-area="" asp-controller="Home">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="~/UploadedImage/NavbarLogo.jpg" alt="ConstructionApplication Logo" style="width: 100px; height: 60px;" />
                 </a>
-                
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"><b>Home</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CostMaster" asp-action="Index"><b>Cost Master</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="Index"><b>Attendance</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MaterialPurchase" asp-action="Index"><b>Material Report</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contractor" asp-action="Index"><b>Contractors</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="javascript:void(0);" onclick="toggleAboutUs()"><b>About Us</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"><b>Contact Us</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogIn"><b>LogIn</b></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/PlayAlertSoundUsingJavaScript.html"><b>Alert Sound</b></a>
-                        </li>
+                        @if (userId != null)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><b>Home</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CostMaster" asp-action="Index"><b>Cost Master</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="Index"><b>Attendance</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MaterialPurchase" asp-action="Index"><b>Material Report</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Contractor" asp-action="Index"><b>Contractors</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Site" asp-action="Index"><b>Site</b></a>
+                            </li>
+                        }
                     </ul>
+
+                    @if (userId != null)
+                    {
+                        <ul class="navbar-nav ms-auto">
+                            @if (!string.IsNullOrEmpty(selectedSiteName))
+                            {
+                                <li class="nav-item me-3">
+                                    <span class="nav-link text-info"><b>Site: <b>@selectedSiteName</b></b>&nbsp; | </span>
+                                </li>
+                            }
+                            <li class="nav-item me-3">
+                                <span class="nav-link text-dark"><b>Welcome, @userName</b></span>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut"><b>Log Out</b></a>
+                            </li>
+                        </ul>
+                    }
                 </div>
             </div>
         </nav>
@@ -68,6 +86,7 @@
             &copy; 2024 - ConstructionApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
