--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -3,8 +3,8 @@
 <h3 style="text-align: center;">Attendance Report</h3>
 <div class="bottom-section">
     <a asp-controller="DailyAttendance" asp-action="Add">Add New</a>
-    &nbsp;&nbsp;&nbsp;
-    <a asp-controller="DailyAttendance" asp-action="AddUsingAjax">Add New (Using AJAX)</a>
+    @* &nbsp;&nbsp;&nbsp;
+    <a asp-controller="DailyAttendance" asp-action="AddUsingAjax">Add New (Using AJAX)</a> *@
 </div>
 <html>
 <head>
