--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -96,7 +96,7 @@
                 <tr class="header-row">
                     <td><b>Date</b></td>
                     <td><b>Job Type</b></td>
-                    <td><b>Contractors</b></td>
+                    <td><b>Service Providers</b></td>
                     <td><b>Total Worker</b></td>
                     <td><b>Amount Per Worker</b></td>
                     <td><b>Total Amount</b></td>
@@ -107,7 +107,7 @@
                     <tr class="table1">
                         <td>@dailyAttendanceVm.Date.ToString("dd-MMMM-yyyy")</td>
                         <td>@dailyAttendanceVm.Name</td>
-                        <td>@dailyAttendanceVm.ContractorName</td>
+                        <td>@dailyAttendanceVm.ServiceProviderName</td>
                         <td>@dailyAttendanceVm.TotalWorker</td>
                         <td>@dailyAttendanceVm.AmountPerWorker</td>
                         <td>@dailyAttendanceVm.TotalAmount</td>
