--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="MaterialPurchase" asp-action="Index"><b>Material Report</b></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Contractor" asp-action="Index"><b>Contractors</b></a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ServiceProvider" asp-action="Index"><b>Service Provider</b></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Site" asp-action="Index"><b>Site</b></a>
