--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
@@ -107,7 +107,11 @@
 </head>
 
 <body>
-    <span class="text-success"><b>@TempData["SuccessMessage"]</b></span>
+    <span class="text-success">
+        <b>@TempData["SuccessMessage"]
+           @TempData["DeleteSuccessMessage"]
+        </b>
+    </span>
 
     <div class="bottom-section">
         <a asp-controller="MaterialPurchase" asp-action="Add">Add New</a>
@@ -156,6 +160,7 @@
                 <td><b>Material Cost</b></td>
                 <td><b>Delivery Charge</b></td>
                 <td><b>Total Amount</b></td>
+                <td><b>Action</b></td>
             </tr>
             @foreach (var materialPurchaseVm in Model)
             {
@@ -171,6 +176,14 @@
                     <td>@materialPurchaseVm.MaterialCost</td>
                     <td>@materialPurchaseVm.DeliveryCharge</td>
                     <td>@totalAmount</td>
+                    <td>
+                        <form asp-action="Delete" asp-controller="MaterialPurchase" method="post" style="display:inline;"
+                              onsubmit="return confirm('Are you sure you want to delete this Service Provider?');">
+                            <input type="hidden" name="Id" value="@materialPurchaseVm.Id" />
+                            <button type="submit" class="btn btn-link p-0 m-0 align-baseline" style="color: #007bff;">Delete</button>
+                        </form>
+
+                    </td>
                 </tr>
             }
         </table>
